--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.5",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
