--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.11.0",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.6.8",
+    "lucia": "^3.1.1",
     "next": "14.1.4",
+    "oslo": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
