--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-email/components": "0.0.16",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "lucia": "^3.1.1",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
     "oslo": "^1.2.0",
     "react": "^18",
