--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "firebase": "^10.10.0",
     "lucia": "^3.1.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
