add loading page

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "lucia": "^3.1.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "next-nprogress-bar": "^2.3.11",
+    "nextjs-progressbar": "^0.0.16",
     "nodemailer": "^6.9.13",
+    "nprogress": "^0.2.0",
     "oslo": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
